--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,8 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://localhost:xxxx
+VITE_URL=http://localhost:xxxx
 API_KET=xxxxx
 
 APP_LOCALE=en
